<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <Button
        android:id="@+id/home_dailypak"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".15"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:elevation="10dp"
        android:background="#e4a6a6"
      android:text="@string/todays_daily_pak"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/home_karmaclub"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".15"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:background="#e4a6a6"
        android:text="@string/karmaclub"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/home_join"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".15"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:background="#e4a6a6"
        android:text="@string/join_pak"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/home_invite"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".15"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:background="#e4a6a6"
        android:text="@string/invite_friends"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/home_prsnofwk"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".15"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:background="#e4a6a6"
        android:text="@string/person_of_week"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/home_causeofmnth"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".15"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:background="#e4a6a6"
        android:text="@string/cause_of_month"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/home_getinvlvd"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".15"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:background="#e4a6a6"
        android:text="@string/get_involved"
        android:textSize="20sp"/>

</LinearLayout>