<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context="plannedactsofkindness.org.plannedactsofkindness.activity_loading.SignInActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="5dp"
        android:textSize="75px"
        android:textAlignment="center"
        android:textStyle="bold"
        android:text="@string/paktitle"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="center"
        android:padding="8dp"
        android:src="@drawable/paklogo"/>

    <EditText
        android:id="@+id/signin_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/custom_edittext"
        android:textSize="20dp"
        android:inputType="text"
        android:hint="@string/si_username"/>

    <EditText
        android:id="@+id/signin_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_edittext"
        android:padding="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="8dp"
        android:textSize="20dp"
        android:inputType="textPassword"
        android:hint="@string/si_password"/>

    <Button
        android:id="@+id/signin_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textSize="15dp"
        android:text="@string/si_signin"/>

    <TextView
        android:id="@+id/signin_joinpak"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="5dp"
        android:textSize="40sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:text="@string/si_join"/>

    <TextView
        android:id="@+id/signin_forgotpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="5dp"
        android:textSize="40sp"
        android:textAlignment="center"
        android:textStyle="italic"
        android:text="@string/si_forgot"/>



</LinearLayout>
