<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="plannedactsofkindness.org.plannedactsofkindness.activity_karma_club.Karma_Reward_Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="10dp"
        android:text="Get Rewarded!"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kreward_1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="10dp"
        android:text="Be A Leader!"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kreward_2"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="10dp"
        android:text="The Path Ahead"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kreward_3"/>

    </LinearLayout>
</FrameLayout>
